2005-03-17  Andras Varga

	* tkapp.cc: added calls to new scheduler->executionResumed()

2005-03-07  Andras Varga

	* tkapp.cc: added support for -r <run-number> command-line option, 
	which has the same effect as (but takes priority over) [Tkenv]/
	default-run ini file entry.

2005-03-03  Andras Varga

	* structinsp.cc: fix: Tkenv crashed if control info object didn't have
	cStructDescriptor registered [reported by Kurtis Kredo II]

2005-03-02  Andras Varga

	* tkapp.h/cc: makeOptionsEffective() merged into readPerRunOptions()

2005-02-07  Andras Varga

	* enhancement: in omnetpp.ini, description="some text" entries can be 
	added under the [Run 1], [Run 2] etc sections. These descriptions will
	appear in the Tkenv run selection dialog.

2005-02-06  Andras Varga

	* gateinsp.tcl, modinsp.cc: fixed cGate inspector error introduced 
	in 3.0

2005-01-17  Andras Varga

	* combobox.tcl updated to version 2.3 which also works on Mac OS/X 
	[suggested by Michael Tuexen]

2005-01-10  Andras Varga

	* tkapp.cc, tkcmd.cc: factored out platform dependencies to 
	include/platdep

2004-12-29  ------ omnetpp-3.0 released ------

2004-12-15  Andras Varga

	* extra-stack= option replaced with extra-stack-kb. Default raised to
	48K (37K stack usage was observed on SUSE 9.1)

2004-12-10  Andras Varga

	* default background color changed from #c0c0c0 to #d0d0d0 

2004-11-29  Andras Varga

  	* tkapp.cc: on Mac OS/X, implement ftime() with gettimeofday() [patch 
  	from Michael Tuexen]

  	* tkutil.cc: hide gatev and paramv in "Contents" page of a simple 
  	module inspector

2004-11-25  Andras Varga

	* several files: displayStringAsParent() renamed to backgroundDisplay-
	String(); cSimpleChannel renamed to cBasicChannel

2004-11-23  ------ omnetpp-3.0b1 released ------

2004-11-18  Andras Varga

	* menuproc.tc: added exit confirmation question "Do you want to call
	finish() before exiting? Yes No Cancel"

2004-11-03  ------ omnetpp-3.0a9 released ------

2004-11-01  Andras Varga
