@@ -344,6 +344,10 @@ proc get_help_tip {w x y item} {
        # if this is a simulation object, get its pointer
        set ptr ""
        set tags [$w gettags $item]
+       if {[lsearch $tags "qlen"] != -1} {
+          return "double-click to inspect queue"
+       }
+
        if {[lsearch $tags "tooltip"] == -1} {
           return ""
        }
@@ -358,6 +362,16 @@ proc get_help_tip {w x y item} {
        if {$ptr!=""} {
           set tip "([opp_getobjectclassname $ptr]) [opp_getobjectfullname $ptr] [opp_getobjectinfostring $ptr]"
           regsub {  +} $tip {  } tip
+          if {[lsearch $tags "modname"] == -1} {
+             set dispstr [opp_getobjectfield $ptr displayString]
+          } else {
+             # if it has tag "modname", it is the enclosing module
+             set dispstr [opp_getobjectfield $ptr backgroundDisplayString]
+          }
+          set tt_tag [opp_displaystring $dispstr getTagArg "tt" 0]
+          if {$tt_tag!=""} {
+             append tip "\n$tt_tag"
+          }
           return $tip
        }
    }
