@@ -1,3 +1,8 @@
+2005-03-19  Andras Varga
+
+	* gate inspector dialog revised (connection display string made 
+	editable)
+
 2005-03-17  Andras Varga
 
 	* tkapp.cc: added calls to new scheduler->executionResumed()
